Refactor security, optimize query performance and improve test suite