@@ -7,9 +7,13 @@ import java.util.function.Function;
 import javax.crypto.SecretKey;
 
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.core.env.Environment;
+import org.springframework.core.env.Profiles;
 import org.springframework.stereotype.Service;
 
 import io.jsonwebtoken.Claims;
+import io.jsonwebtoken.ExpiredJwtException;
+import io.jsonwebtoken.JwtException;
 import io.jsonwebtoken.Jwts;
 import io.jsonwebtoken.security.Keys;
 import jakarta.annotation.PostConstruct;
@@ -19,43 +23,40 @@ import lombok.extern.slf4j.Slf4j;
 @Slf4j
 public class JwtService {
 
+    public static final long CLOCK_SKEW_SECONDS = 60;
+
+    private final Environment environment;
+
     @Value("${app.jwt.secret:}")
     private String jwtSecret;
 
     @Value("${app.jwt.expiration-ms:86400000}")
     private long jwtExpirationMs;
 
-    @Value("${spring.profiles.active:dev}")
-    private String activeProfile;
-
     private SecretKey signingKey;
+
+    public JwtService(Environment environment) {
+        this.environment = environment;
+    }
 
     @PostConstruct
     public void init() {
-        if (jwtSecret != null && !jwtSecret.trim().isEmpty()) {
-            if (jwtSecret.trim().length() < 32) {
-                throw new IllegalStateException("JWT_SECRET must be at least 32 characters (256 bits) long for secure HS256 signing.");
+        if (jwtSecret != null && !jwtSecret.isBlank()) {
+            String secret = jwtSecret.trim();
+            if (secret.length() < 32) {
+                throw new IllegalStateException("JWT_SECRET must be at least 32 characters for HS256.");
             }
-            byte[] keyBytes = jwtSecret.getBytes(StandardCharsets.UTF_8);
-            this.signingKey = Keys.hmacShaKeyFor(keyBytes);
-        } else {
-            java.util.List<String> activeProfiles = activeProfile != null
-                    ? java.util.Arrays.asList(activeProfile.split(","))
-                    : java.util.Collections.emptyList();
-            boolean isDevOrTest = activeProfiles.stream().anyMatch(p -> {
-                String trimmed = p.trim();
-                return trimmed.equalsIgnoreCase("dev") || trimmed.equalsIgnoreCase("test");
-            });
-
-            // In non-dev/non-test profiles, fail fast if JWT_SECRET is not provided
-            if (!isDevOrTest) {
-                throw new IllegalStateException("JWT_SECRET environment variable is strictly required in production profiles.");
-            }
-            // In development mode without an explicit JWT_SECRET, an ephemeral key is generated for convenience.
-            // Note that all issued tokens will be invalidated upon application server restart.
-            this.signingKey = Jwts.SIG.HS256.key().build();
-            log.warn("JWT_SECRET not configured; generated ephemeral development signing key (tokens invalidate on restart).");
+            this.signingKey = Keys.hmacShaKeyFor(secret.getBytes(StandardCharsets.UTF_8));
+            return;
         }
+
+        if (environment.acceptsProfiles(Profiles.of("dev", "test"))) {
+            this.signingKey = Jwts.SIG.HS256.key().build();
+            log.warn("JWT_SECRET not set; using a one-off key (tokens die on restart).");
+            return;
+        }
+
+        throw new IllegalStateException("JWT_SECRET is required outside dev/test.");
     }
 
     private SecretKey getSigningKey() {
@@ -64,12 +65,10 @@ public class JwtService {
 
     public String generateToken(String username) {
         Date now = new Date();
-        Date expiryDate = new Date(now.getTime() + jwtExpirationMs);
-
         return Jwts.builder()
                 .subject(username)
                 .issuedAt(now)
-                .expiration(expiryDate)
+                .expiration(new Date(now.getTime() + jwtExpirationMs))
                 .signWith(getSigningKey())
                 .compact();
     }
@@ -79,17 +78,18 @@ public class JwtService {
     }
 
     public <T> T extractClaim(String token, Function<Claims, T> claimsResolver) {
-        final Claims claims = extractAllClaims(token);
-        return claimsResolver.apply(claims);
+        return claimsResolver.apply(extractAllClaims(token));
     }
 
     public boolean isTokenValid(String token, String username) {
         try {
-            final Claims claims = extractAllClaims(token);
-            final String extractedUsername = claims.getSubject();
-            final boolean isExpired = claims.getExpiration().before(new Date(System.currentTimeMillis() - 60_000));
-            return (username != null && username.equals(extractedUsername) && !isExpired);
-        } catch (Exception e) {
+            String extracted = extractAllClaims(token).getSubject();
+            return username != null && username.equals(extracted);
+        } catch (ExpiredJwtException e) {
+            log.debug("Token expired: {}", e.getMessage());
+            return false;
+        } catch (JwtException | IllegalArgumentException e) {
+            log.debug("Invalid token: {}", e.getMessage());
             return false;
         }
     }
@@ -97,7 +97,7 @@ public class JwtService {
     private Claims extractAllClaims(String token) {
         return Jwts.parser()
                 .verifyWith(getSigningKey())
-                .clockSkewSeconds(60)
+                .clockSkewSeconds(CLOCK_SKEW_SECONDS)
                 .build()
                 .parseSignedClaims(token)
                 .getPayload();
